--- a/src/style.css
+++ b/src/style.css
@@ -44,6 +44,15 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
+.page {
+	padding: 1rem;
+}
+
+.container {
+	margin: 0 auto;
+	max-width: 900px;
+}
+
 /* header  */
 
 #header {
@@ -75,6 +84,46 @@ body {
 #header .auth-options button:hover {
 	background-color: #be3a3a;
 }
+
+/* form  */
+.form label,
+.form input {
+	display: block;
+}
+
+.form input {
+	margin-bottom: 1rem;
+}
+
+.form label {
+	margin-bottom: 0.2rem;
+}
+
+.form input[type='text'],
+.form input[type='email'],
+.form input[type='password'] {
+	width: 100%;
+	padding: 0.3rem;
+	border: 1px solid #c2c2c2;
+	border-radius: 8px;
+	background-color: #f0f0f0;
+	font-size: 1.1rem;
+}
+.form input:focus {
+	border: 1px solid #50a4e9;
+	box-shadow: inset 0px 0px 5px rgba(38, 142, 228, 0.5);
+	outline: none;
+}
+
+.form input[type='submit'] {
+	padding: 0.3rem 0.5rem;
+	background-color: #c8ecb7;
+	border: 1px solid #6aa051;
+	border-radius: 8px;
+	font-size: 1.1rem;
+}
+
+/* media queries  */
 
 @media screen and (max-width: 550px) {
 	#header .title {
